# DURP

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  durp.toml.example  pyproject.toml
.github/workflows/: ci.yml
data/cargo/: cargo-9ac20c07.json
deploy/: bootstrap.sh  cache-metrics.README.md  cache-metrics.service  cache-metrics.sh  cache-metrics.timer  smoke.sh
deploy/grafana-rp/: setup.sh
docker/cargo-fat/: Dockerfile  index.json  repro-sources-list.sh
docs/: SESSION-HANDOFF.md  ecosystem-plugin-interface.md  taxonomy-codebook.md
docs/cargo/: image-management.md  reproducible-builds.md  reproduction-runbook.md  running-a-batch.md  survey-findings.md
docs/findings/: README.md  ds1-full-findings.md  ds1-full-r2-findings.md  failure-class-fixability.md  live-mine-rq3-prep.md  native-dep-case-study.md  openssl-case-study.md  rebatchi.md  recovery-experiments.md  taxonomy-literature.md
docs/shared/: bump_ext-library.md  schema.md
durp/: __init__.py  __main__.py  config.py  dispatch.py
lib/bump_ext/: __init__.py  db.py  models.py  validate.py  writer.py
pipelines/cargo/: README.md  cargo_assemble_entry.py  cargo_classifier.py  cargo_dockerizer.py  cargo_drive.py  cargo_failure_classifier.py  cargo_miner.py  (+4 more)
schema/: entry.schema.json  failure-taxonomy.md
scripts/: build_native_dep_cohort.py  build_openssl_cohort.py  build_rerun_cohort.py  build_taxonomy_sample.py  cargo_live_sample.py  cargo_live_search.py  cargo_survey_sys_deps.py  launch_live_mine.sh  launch_livemine_drive.sh  rebatchi_ds1_count.py  rebatchi_to_candidate.py  score_taxonomy_kappa.py  stratify_candidates.py
tests/: conftest.py  test_cargo_toolchain.py  test_durp_cli.py  test_fat_image_bucketing.py  test_live_sample_filter.py  test_schema_validation.py
(+3 files in other folders)
