[project]
name = "bump_ext"
version = "0.0.2"
description = "Shared schema and tooling for cross-ecosystem reproducible dependency-update benchmarks (TU Delft RP 2025/2026 Q4)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "requests>=2.31",
]

[project.optional-dependencies]
cargo = [
    "PyGithub>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/bump_ext"]
