[project]
name = "bump_ext"
version = "0.0.5"
description = "Shared schema and tooling for cross-ecosystem reproducible dependency-update benchmarks (TU Delft RP 2025/2026 Q4)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "requests>=2.31",
]

[project.optional-dependencies]
# The Cargo pipeline's runtime needs (requests, etc.) are already in the
# core dependencies — it talks to the GitHub REST API via `requests`, not
# PyGithub, and the DS1 rar filter shells out to the `unrar` binary. The
# extra is kept as a documented install target (`pip install -e '.[cargo]'`
# appears in the README/runbook) even though it adds nothing beyond core.
cargo = []
# Test + lint tooling. `pip install -e '.[dev]'` then `pytest`.
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/bump_ext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root + lib/ on the import path so `pipelines.cargo.*` and
# `bump_ext` resolve during collection even without an editable install.
pythonpath = [".", "lib"]
